kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-quote
  annotations: {}
  labels:
    app.kubernetes.io/name: stock-quote
    app.kubernetes.io/version: "latest"
spec:
  selector:
    matchLabels:
      app: quote
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: quote
    spec:
      containers:
      - name: quote
        image: quote:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 15
        ports:
        - containerPort: 8443
        imagePullPolicy: Never
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "1"
        volumeMounts:
        - name: tls-certs
          mountPath: "/certs"
          readOnly: true
        - name: config
          mountPath: "/config"
          readOnly: true
        - name: secrets
          mountPath: "/secrets"
          readOnly: true
      volumes:
      - name: tls-certs
        secret:
          secretName: certs
      - name: config
        configMap:
          name: quote-config
      - name: secrets
        secret:
          secretName: quote-secret
